derive-macros/tests/field_id_validation/expression.stderr
error: field_id error: must be an integer literal
  --> tests/field_id_validation/expression.rs:14:18
   |
14 |     #[field_id = MY_ID]  // Should be literal, not expression
   |                  ^^^^^

error: attribute value must be a literal
  --> tests/field_id_validation/expression.rs:14:18
   |
14 |     #[field_id = MY_ID]  // Should be literal, not expression
   |                  ^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `delta_kernel`
  --> tests/field_id_validation/expression.rs:12:10
   |
12 | #[derive(ToSchema)]
   |          ^^^^^^^^ use of unresolved module or unlinked crate `delta_kernel`
   |
   = help: if you wanted to use a crate named `delta_kernel`, use `cargo add delta_kernel` to add it to your `Cargo.toml`
   = note: this error originates in the derive macro `ToSchema` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `delta_kernel`
  --> tests/field_id_validation/expression.rs:12:10
   |
12 | #[derive(ToSchema)]
   |          ^^^^^^^^ use of unresolved module or unlinked crate `delta_kernel`
   |
   = help: if you wanted to use a crate named `delta_kernel`, use `cargo add delta_kernel` to add it to your `Cargo.toml`
   = note: this error originates in the derive macro `ToSchema` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
   |
 1 + use crate::StructType;
   |
